--- a/package.json
+++ b/package.json
@@ -10,20 +10,42 @@
     "typegen": "sanity schema extract --path=src/sanity/extract.json && sanity typegen generate && rm ./src/sanity/extract.json"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.1.11",
+    "@aptos-labs/ts-sdk": "^1.35.0",
+    "@aptos-labs/wallet-standard": "^0.3.0",
+    "@datastax/astra-db-ts": "^1.5.0",
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
+    "@langchain/community": "^0.3.29",
+    "@langchain/core": "^0.3.39",
+    "@langchain/openai": "0.0.10",
+    "@nanostores/react": "ai/react",
+    "@nightlylabs/wallet-selector-aptos": "^0.1.15",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.52.2",
+    "ai": "3.4.33",
+    "cheerio": "^1.0.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.12",
     "feed": "^4.2.2",
+    "firebase": "8",
     "framer-motion": "^11.2.10",
+    "langchain": "0.1.1",
+    "lucide-react": "^0.475.0",
     "next": "14.2.11",
     "next-sanity": "^9.4.7",
+    "node-fetch": "^3.3.2",
+    "openai": "^4.85.1",
+    "puppeteer": "^24.2.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.3",
+    "react-syntax-highlighter": "^15.6.1",
+    "react-textarea-autosize": "^8.5.7",
     "react-use-measure": "^2.1.1",
-    "sanity": "^3.55.0"
+    "remark-gfm": "^4.0.1",
+    "sanity": "^3.55.0",
+    "tsx": "^4.19.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
