--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nightlylabs/wallet-selector-aptos": "^0.1.15",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.52.2",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "3.4.33",
     "cheerio": "^1.0.0",
     "clsx": "^2.1.1",
